--- a/WD-400/html/layouts/table-tv-schedule-complete.html
+++ b/WD-400/html/layouts/table-tv-schedule-complete.html
@@ -33,6 +33,9 @@
         td img{
             height: 30px;
         }
+        tr td:first-of-type {
+            text-align: center;
+        }
     </style>
 </head>
 
