--- a/layouts/table-tv-schedule.html
+++ b/layouts/table-tv-schedule.html
@@ -17,7 +17,7 @@
     <table>
         <thead>
             <tr>
-                <th>WEDNESDAY</th>
+                <th class='all-caps bg-orange'>Wednesday</th>
                 <th>8pm</th>
                 <th>8:30pm</th>
                 <th>9pm</th>
