--- a/layouts/table-examples.html
+++ b/layouts/table-examples.html
@@ -78,9 +78,7 @@
         <thead>
             <tr>
                 <th colspan="4">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi tempora sed, cum, error recusandae laudantium! Quod assumenda
-                    consectetur reiciendis, illum laborum vero praesentium nostrum rem magnam repudiandae, nesciunt inventore,
-                    beatae.
+                    Lorem ipsum dolor sit.
                 </th>
             </tr>
         </thead>
