--- a/layouts/table-tv-schedule-complete.html
+++ b/layouts/table-tv-schedule-complete.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template page</title>
     <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <style>
@@ -13,34 +12,41 @@
             color: white;
             width: 120px;
         }
+
         th:first-of-type {
             background-color: orangered;
         }
-                table,
+
+        table,
         th,
         td {
             border: 1px solid white;
             border-collapse: collapse;
         }
-        
+
         th,
         td {
             padding: 10px 10px 10px 5px;
         }
+
         td {
             background-color: lightsteelblue;
         }
-        td img{
+
+        td img {
             height: 30px;
         }
+
         tr td:first-of-type {
             text-align: center;
         }
     </style>
+    <title>TV Schedule - complete</title>
+
 </head>
 
 <body>
-    <h1>Headline</h1>
+    <h1>TV Schedule - complete</h1>
     <a href="index.html">
         <i class="fa fa-home fa-2x" style='color:red'></i>
     </a>
@@ -57,7 +63,8 @@
             </tr>
         </thead>
         <tr>
-            <td><img src="http://www.worldleagueofamericanfootball.com/sitebuildercontent/sitebuilderpictures/abc_logo2.jpg" alt="ABC"></td>
+            <td><img src="http://www.worldleagueofamericanfootball.com/sitebuildercontent/sitebuilderpictures/abc_logo2.jpg"
+                    alt="ABC"></td>
             <td>The Middle</td>
             <td>Better With You</td>
             <td>Modern Family</td>
