--- a/layouts/table-tv-schedule.html
+++ b/layouts/table-tv-schedule.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template page</title>
     <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <title>TV Schedule</title>
 </head>
 
 <body>
-    <h1>Headline</h1>
+    <h1>TV Schedule</h1>
     <a href="index.html">
         <i class="fa fa-home fa-2x" style='color:red'></i>
     </a>
