--- a/layouts/media-queries.html
+++ b/layouts/media-queries.html
@@ -104,7 +104,7 @@
     </nav>
     <h1>Media Queries for <span id="media-type"></span></h1>
     <div>
-        <img src="../img/grumpy-cat.jpg" alt="Grumpy Cat">
+        <img src="../images/grumpy-cat.jpg" alt="Grumpy Cat">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga dolorum sed inventore consectetur, voluptatum voluptas
             labore magni corporis voluptatibus ut iste, voluptatem molestias nobis, pariatur expedita praesentium laudantium.
             Autem, voluptates!</p>
