--- a/layouts/table-tv-schedule-complete.html
+++ b/layouts/table-tv-schedule-complete.html
@@ -33,11 +33,11 @@
             background-color: lightsteelblue;
         }
 
-        td img {
+        td>img {
             height: 30px;
         }
 
-        tr td:first-of-type {
+        tr>td:first-of-type {
             text-align: center;
         }
     </style>
