--- a/layouts/floats.html
+++ b/layouts/floats.html
@@ -34,11 +34,11 @@
         <i class="fa fa-home fa-2x" style='color:red'></i>
     </a>
     <h1>Floats</h1>
-    <img src="images/grumpy-cat.jpg" alt="grumpy cat" class='float-right'>
+    <img src="../images/grumpy-cat.jpg" alt="grumpy cat" class='float-right'>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium aspernatur nihil accusantium, nulla nam pariatur
         repudiandae hic, vel, qui doloremque incidunt facere asperiores perferendis possimus et, nostrum! At, assumenda,
         tempore.</p>
-    <img src="images/grumpy-cat.jpg" alt="grumpy cat" class='float-left'>
+    <img src="../images/grumpy-cat.jpg" alt="grumpy cat" class='float-left'>
     <p>Itaque dolorem, delectus mollitia quisquam deserunt, laudantium alias sit repellat temporibus magnam explicabo, quis,
         accusantium nesciunt cumque et adipisci aliquid corporis quae eveniet vero placeat ullam. Ea quam, sunt laboriosam!</p>
     <p>Tempora molestiae at reiciendis veritatis enim fugit quibusdam harum sed ullam repellendus maxime necessitatibus sit
