--- a/layouts/table-tv-schedule-complete.html
+++ b/layouts/table-tv-schedule-complete.html
@@ -15,6 +15,7 @@
 
         th:first-of-type {
             background-color: orangered;
+            text-transform: uppercase;
         }
 
         table,
@@ -53,7 +54,7 @@
     <table>
         <thead>
             <tr>
-                <th>WEDNESDAY</th>
+                <th>Wednesday</th>
                 <th>8pm</th>
                 <th>8:30pm</th>
                 <th>9pm</th>
