--- a/layouts/table-tv-schedule-complete.html
+++ b/layouts/table-tv-schedule-complete.html
@@ -63,32 +63,36 @@
                 <th>10:30pm</th>
             </tr>
         </thead>
-        <tr>
-            <td><img src="http://www.worldleagueofamericanfootball.com/sitebuildercontent/sitebuilderpictures/abc_logo2.jpg"
-                    alt="ABC"></td>
-            <td>The Middle</td>
-            <td>Better With You</td>
-            <td>Modern Family</td>
-            <td>Cougar Town</td>
-            <td colspan="2">The Whole Truth</td>
-        </tr>
-        <tr>
-            <td><img src="https://s-media-cache-ak0.pinimg.com/originals/1b/81/c3/1b81c345c2fe6d6bc818cf2fde67a40a.jpg" alt="CBS"></td>
-            <td colspan="2">Survivor: Nicaragua</td>
-            <td colspan="2">Criminal Minds</td>
-            <td colspan="2">The Defenders</td>
-        </tr>
-        <tr>
-            <td><img src="http://1.bp.blogspot.com/-9V3f1_s8L9c/UZUNacrKvTI/AAAAAAAAaQ0/HEIZ_EjZy7U/s1600/cw_logo.png" alt="The CW"></td>
-            <td colspan="2">America's Next Top Model</td>
-            <td colspan="2">Hellcats</td>
-            <td colspan="2">Local</td>
-        </tr>
-        <tr>
-            <td><img src="http://pfeifferlaw.com/assests/FOX.png" alt="FOX"></td>
-            <td colspan="4">Hell's Kitchen</td>
-            <td colspan="2">Local</td>
-        </tr>
+        <tbody>
+            <tr>
+                <td><img src="http://www.worldleagueofamericanfootball.com/sitebuildercontent/sitebuilderpictures/abc_logo2.jpg"
+                        alt="ABC"></td>
+                <td>The Middle</td>
+                <td>Better With You</td>
+                <td>Modern Family</td>
+                <td>Cougar Town</td>
+                <td colspan="2">The Whole Truth</td>
+            </tr>
+            <tr>
+                <td><img src="https://s-media-cache-ak0.pinimg.com/originals/1b/81/c3/1b81c345c2fe6d6bc818cf2fde67a40a.jpg"
+                        alt="CBS"></td>
+                <td colspan="2">Survivor: Nicaragua</td>
+                <td colspan="2">Criminal Minds</td>
+                <td colspan="2">The Defenders</td>
+            </tr>
+            <tr>
+                <td><img src="http://1.bp.blogspot.com/-9V3f1_s8L9c/UZUNacrKvTI/AAAAAAAAaQ0/HEIZ_EjZy7U/s1600/cw_logo.png"
+                        alt="The CW"></td>
+                <td colspan="2">America's Next Top Model</td>
+                <td colspan="2">Hellcats</td>
+                <td colspan="2">Local</td>
+            </tr>
+            <tr>
+                <td><img src="http://pfeifferlaw.com/assests/FOX.png" alt="FOX"></td>
+                <td colspan="4">Hell's Kitchen</td>
+                <td colspan="2">Local</td>
+            </tr>
+        </tbody>
     </table>
 </body>
 
